# my_api

./: .env  .gitignore  Cargo.toml  diesel.toml
migrations/2025-06-13-021943_create_players/: up.sql
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  static_files.rs
