[package]
name = "my_api"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.10", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rocket = { version = "0.5.1", features = ["json"] }